<resources>
    <string name="login_fail">☼用户名或密码错误！！</string>
    <string name="show_info_lable">  车位信息</string>
    <string name="app_name">车位</string>
    <string name="logon_activity_lab">注册</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>

    <!-- activity_main -->
    <string name="longin_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="Button_longup">注册</string>
    <string name="Button_longin">登录</string>
    <string name="set">设置</string>

    <!-- activity_logup_main -->
    <string name="logup_information">
        非常抱歉，暂未开启注册！！
    </string>
    <string name="Car_full_txt">此处没有车</string>
    <string name="car_empty_txt">此处有车位</string>
    <string name="go_to">到这儿去</string>
    <string name="title_activity_setting_aty">SettingAty</string>

    <!-- activity_setting-->
    <string name="ip_name">ip地址</string>
    <string name="ip_port">端口</string>
    <string name="OK" >确定</string>

    <string name="car_posion">车位号</string>
    <string name="car_status">车位状态</string>

</resources>
