<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/yonghu"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="70dp"
        android:scaleType="center"/>

    <EditText
        android:id="@+id/UserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longin_hint"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Button_logup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Button_longup"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/Button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Button_longin"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>